# dipole-ska

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  setup.bash  setup.csh  setup.sh
.github/workflows/: tests.yml
dipoleska/examples/: README.md  add_dipole.py  bright_maps.py  bright_maps_compare.py  catalogue_read.py  custom_prior.py  dipole_ska.ipynb  fixed_dipole.py  generalpoisson_lnlike.py  generalpoissonrms_lnlike.py  load_fixed_maps.py  map_process.py  mapcollections.py  masking_downgrading.py  model_comparison_multi.py  model_comparison_single.py  model_comparison_single_extended.py  multicorner.py  multipole_showcase.py  poissonrms_lnlike.py  posterior_power_spectrum.py  power_spectrum_pipeline.py  power_spectrum_rms+mask.py  power_spectrum_showcase.py  power_spectrum_with_mask.py  preview_fixed_maps.py  quickstart.py  run_subset.py
dipoleska/models/: default_priors.py  dipole.py  model_helpers.py  multipole.py  priors.py
dipoleska/powerspectrum/: posterior_power_spectrum.py  power_spectrum_plotter.py
docs/: map_collections.md
examples/: add_dipole.py
models/: default_priors.py  dipole.py  priors.py
tests/: test_coordinate_conversion.py  test_dipole_prior.py  test_inference_logging.py  test_map_collection_loader_dynamic.py  test_map_plotter.py  test_map_processor.py  test_multipole_integration.py  test_multipole_math.py  test_multipole_prior.py  test_parameter_lookup.py  test_posterior.py  test_posterior_corner_plot.py
utils/: inference.py  map_read.py  math.py  modulated_map_generator.py  physics.py  plotting.py  posterior.py
(+22 files in other folders)
