[project]
name = "dipoleska"
version = "0.1.0"
description = "Fit dipoles to SKA maps"
authors = [
    {name = "Oliver Oayda",email = "oliver.oayda@sydney.edu.au"},
    {name = "Vasudev Mittal",email = "vasudev.mittal@sydney.edu.au"},
    {name = "Mali Land-Strykowski",email = "mali.land-strykowski@sydney.edu.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy (>=7.0.2,<8.0.0)",
    "healpy (>=1.18.1,<2.0.0)",
    "numpy (<2.0.0)",
    "matplotlib (==3.7.5)",
    "ultranest (>=4.4.0,<5.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "getdist (>=1.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
